fix button overflow

--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,6 @@ body {
 
 .value-description {
   opacity: .8;
-  font-weight: 300;
   margin:0 auto;
 }
 
@@ -148,6 +147,14 @@ body {
   }
 }
 
+@media (max-width: 400px) {
+  .container{
+    padding: 0 5px;
+  }
+  .value-description {
+    font-size: 12px;
+  }
+}
 /* Bigger than 750 */
 @media (min-width: 750px) {
   .section-description {
